Fix column visibility popup and remove unecessary styles

--- a/web/stylesheets/src/components/partials/_tables.scss
+++ b/web/stylesheets/src/components/partials/_tables.scss
@@ -68,9 +68,10 @@
 	}
 
 	div.column-visibility {
-		button {
+		.trigger {
 			padding: 0;
 			box-shadow: none;
+			margin-left: 5px;
 		}
 	}
 
@@ -85,9 +86,16 @@
 		ul {
 			margin: 0;
 			padding: 0;
+			list-style-type: none;
+		}
+
+		input[type="checkbox"] {
+			display: inline-block;
+			vertical-align: middle;
 		}
 
 		label {
+			display: inline;
 			margin-left: 5px;
 		}
 	}
